samples/_failures_safe/1761787860_3ac7ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eca3fd6d.c:119:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  119 | void print
      | ^~~~
